# uml-ai-tool-backend

./: .env  .env.example  .gitignore  COMANDOS.TXT  Procfile  alembic.ini  diagrama.txt  postman.txt  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0ce4354bd820_init_schema.py  78ab657f33f8_init_schema.py  a9b081449f8a_init_schema.py  b95f07a6dadc_init_schema.py  c94f9c1d677e_init_schema.py  e77292959eb7_init_schema.py
app/: db.py  main.py  ws_manager.py
app/core/: config.py  security.py
app/models/: __init__.py  collaborator.py  uml.py  user.py
app/routers/: _helpers.py  atributos.py  auth.py  classes.py  diagramas.py  export.py  flutter_export.py  ia_edicion.py  imagen_uml.py  metodo.py  realtime.py  relacion.py
app/schemas/: atributo.py  auth.py  clase.py  clase_completa.py  collaborator.py  diagram.py  metodo.py  relacion.py
app/services/: ia_edicion_bd.py  ia_editor.py  ia_editor_text.py  servicio_analisis.py  servicio_archivos.py  servicio_importacion.py  users.py
app/utils/: realtime_events.py
exporters/: README.md  estructura.txt  requirements.txt
exporters/generators/: json_to_full_orm.py  json_to_orm.py  json_to_relations.py  model_to_dto.py  model_to_repository.py  postman_generator.py  project_builder.py  repository_to_service.py  service_to_controller.py  uml_to_json.py  validator.py
exporters/templates/: application.properties.j2  auth_controller.java.j2  auth_request.java.j2  auth_response.java.j2  controller.java.j2  docker-compose.yml.j2  (+9 more)
exportersFlutter/: README.md
seeds/: load_csv_sa.py  utils.py
(+86 files in other folders)
